Closed Bug 1368589 Opened 7 years ago Closed 7 years ago

stylo: <img> is sometimes not positioned correctly for top-level image document

Categories

(Core :: CSS Parsing and Computation, defect)

53 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: xidorn, Assigned: emilio)

References

Details

Attachments

(1 file)

It causes a somehow permafail for reftest image/test/reftest/jpeg/webcam-simulacrum.mjpg where the 1x1 image is incorrectly positioned at top left in the screenshot of test page.

This seems to be a regression from bug 1357583.

I've discussed about this with emilio on IRC, and he has some initial thought about how this should be fixed.
Flags: needinfo?(emilio+bugs)
Flags: needinfo?(emilio+bugs)
Comment on attachment 8872554 [details]
Bug 1368589: handle the case where a RebuildAllStyleData event is posted and stylesheets are added at the same time.

https://reviewboard.mozilla.org/r/144082/#review147778
Attachment #8872554 - Flags: review?(cam) → review+
Pushed by ecoal95@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/c6fb400017f1
handle the case where a RebuildAllStyleData event is posted and stylesheets are added at the same time. r=heycam
https://hg.mozilla.org/mozilla-central/rev/c6fb400017f1
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: