Bug 1368589: handle the case where a RebuildAllStyleData event is posted and stylesheets are added at the same time. r=heycam

MozReview-Commit-ID: IWiTCCo55cg

--HG--
extra : rebase_source : 0c90c496d3d53fa50e42a54332c97591b176ba80